--- a/OCR.ipynb
+++ b/OCR.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,67 +14,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Jv4r_slfGX2n"
+      },
+      "outputs": [],
       "source": [
         "import requests\n",
         "import base64\n",
         "import time\n",
         "import tqdm\n",
         "dt={}"
-      ],
-      "metadata": {
-        "id": "Jv4r_slfGX2n"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from ast import main\n",
-        "api_key = \"AIzaSyC72j6v14nkLXNSHoZMBpwPGLqb2Sw5AXo\"\n",
-        "count = 0\n",
-        "temp1 = list(dt.keys())\n",
-        "for folder in mainls:\n",
-        "  temp = folder.split(\".\")[0]\n",
-        "  count += 1\n",
-        "  pdf_text = ''\n",
-        "  if folder.endswith('.pdf') and temp in temp2:\n",
-        "    ls = os.listdir(\"drive/MyDrive/finance_pdfpic/\"+folder)\n",
-        "    for i in ls:\n",
-        "      with open(\"drive/MyDrive/finance_pdfpic/\"+folder+\"/\"+i, \"rb\") as image_file:\n",
-        "        content = base64.b64encode(image_file.read()).decode(\"utf-8\")\n",
-        "      url = f\"https://vision.googleapis.com/v1/images:annotate?key={api_key}\"\n",
-        "      headers = {\"Content-Type\": \"application/json\"}\n",
-        "      data = {\n",
-        "      \"requests\": [\n",
-        "        {\n",
-        "          \"image\": {\"content\": content},\n",
-        "          \"features\": [{\"type\": \"TEXT_DETECTION\"}]\n",
-        "        }\n",
-        "        ]\n",
-        "      }\n",
-        "      success = False\n",
-        "      retries = 3\n",
-        "      while not success and retries > 0:\n",
-        "        try:\n",
-        "          response = requests.post(url, headers=headers, json=data, timeout=10)\n",
-        "          response.raise_for_status()\n",
-        "          result = response.json()\n",
-        "          text = result['responses'][0].get('textAnnotations', [])\n",
-        "          pdf_text += text[0]['description']\n",
-        "          success = True\n",
-        "        except requests.exceptions.RequestException as e:\n",
-        "          print(f\"Error: {e}. Retrying in 5 seconds...\")\n",
-        "          retries -= 1\n",
-        "          time.sleep(5)  # 等待 5 秒後重試\n",
-        "        except KeyError:\n",
-        "          print(\"Unexpected response format. Skipping this page.\")\n",
-        "          break\n",
-        "  pdf_text = pdf_text.replace('\\n', '')\n",
-        "  name = folder.split(\".\")[0]\n",
-        "  dt[name] = pdf_text\n",
-        "  print(count)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,11 +37,10 @@
         "id": "L_m3WH_TF4uo",
         "outputId": "562c2e04-ffe1-455f-b44b-642d25f11565"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1\n",
             "2\n",
@@ -1139,15 +1079,57 @@
             "1035\n"
           ]
         }
+      ],
+      "source": [
+        "from ast import main\n",
+        "# api_key = Google ocr key\n",
+        "count = 0\n",
+        "temp1 = list(dt.keys())\n",
+        "for folder in mainls:\n",
+        "  temp = folder.split(\".\")[0]\n",
+        "  count += 1\n",
+        "  pdf_text = ''\n",
+        "  if folder.endswith('.pdf') and temp in temp2:\n",
+        "    ls = os.listdir(\"drive/MyDrive/finance_pdfpic/\"+folder)\n",
+        "    for i in ls:\n",
+        "      with open(\"drive/MyDrive/finance_pdfpic/\"+folder+\"/\"+i, \"rb\") as image_file:\n",
+        "        content = base64.b64encode(image_file.read()).decode(\"utf-8\")\n",
+        "      url = f\"https://vision.googleapis.com/v1/images:annotate?key={api_key}\"\n",
+        "      headers = {\"Content-Type\": \"application/json\"}\n",
+        "      data = {\n",
+        "      \"requests\": [\n",
+        "        {\n",
+        "          \"image\": {\"content\": content},\n",
+        "          \"features\": [{\"type\": \"TEXT_DETECTION\"}]\n",
+        "        }\n",
+        "        ]\n",
+        "      }\n",
+        "      success = False\n",
+        "      retries = 3\n",
+        "      while not success and retries > 0:\n",
+        "        try:\n",
+        "          response = requests.post(url, headers=headers, json=data, timeout=10)\n",
+        "          response.raise_for_status()\n",
+        "          result = response.json()\n",
+        "          text = result['responses'][0].get('textAnnotations', [])\n",
+        "          pdf_text += text[0]['description']\n",
+        "          success = True\n",
+        "        except requests.exceptions.RequestException as e:\n",
+        "          print(f\"Error: {e}. Retrying in 5 seconds...\")\n",
+        "          retries -= 1\n",
+        "          time.sleep(5)  # 等待 5 秒後重試\n",
+        "        except KeyError:\n",
+        "          print(\"Unexpected response format. Skipping this page.\")\n",
+        "          break\n",
+        "  pdf_text = pdf_text.replace('\\n', '')\n",
+        "  name = folder.split(\".\")[0]\n",
+        "  dt[name] = pdf_text\n",
+        "  print(count)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for i in range(1036):\n",
-        "  if str(i) not in dt.keys():\n",
-        "    print(i)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1155,61 +1137,63 @@
         "id": "Lud6YYlqyj7T",
         "outputId": "87754c2a-1f20-4838-c4a3-2dbd09bdf24b"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1035\n"
           ]
         }
+      ],
+      "source": [
+        "for i in range(1036):\n",
+        "  if str(i) not in dt.keys():\n",
+        "    print(i)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XzJjL63sGvGr"
+      },
+      "outputs": [],
       "source": [
         "import json\n",
         "with open(\"drive/MyDrive/new_finance2_corpus.json\", 'w', encoding='utf8') as f:\n",
         "  json.dump(dt, f, ensure_ascii=False, indent=4)"
-      ],
-      "metadata": {
-        "id": "XzJjL63sGvGr"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dt.keys()"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "yeCCGcXIzBCu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "yeCCGcXIzBCu",
         "outputId": "01aca958-44db-4f64-cad8-60212f3e50ef"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "dict_keys(['435', '192', '421', '384', '347', '385', '346', '434', '420', '408'])"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "dt.keys()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dt['435']"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1218,42 +1202,42 @@
         "id": "JOLF2hKmjdDt",
         "outputId": "9fdf3cc0-d050-457f-bb82-51dd645ab420"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'台 達 電 子 工 業 股 份 有 限 公 司 及 子 公 司合併 資產負債表民國 111 年3 月31日及民國110年12月31日 3月31日(民國 111 年及 110年3月31日之合併資產負債表僅經核閱,未依一般公認審計準則查核)111負債及權益附註年 3 月 31 日 110年 12月 31 日額 %0/110額 % 金單位:新台幣仟元年 3 月 31 日額 %流動負債2100短期借款六(十三)$3,503,6321 $4,397,3621$1,678,80612120透過損益按公允價值衡量之六(二)金融負債-流動56,37741,371209,7282130合約負債-流動六(二十)5,454,7385,438,9395,076,6252150應付票據2684404,2952170應付帳款51,418,2301454,554,4621547,773,555142180應付帳款-關係人七16,51215,0237,5962200其他應付款六(十四)33,883,48235,652,2021034,402,563102230本期所得稅負債4,077,91813,486,10813,198,13512300其他流動負債六(十五)5,243,9864,583,5704,393,71421XX流動負債合計103,655,14328108,169,4773096,745,01728非流動負債2540長期借款2570遞延所得稅負債2580租賃負債-非流動2600其他非流動負債25XX非流動負債合計2XXX負債總計六(十五)42,072,4751143,913,7871236,445,4021117,428,188516,777,156516,013,67751,443,0451,366,4011,350,8879,741,26038,760,83127,510,89070,684,9681970,818,17519174,340,11147178,987,6524961,320,856158,065,8731846權益股本3110普通股股本六(十七)25,975,433725,975,433725,975,4338資本公積六(十八)3200資本公積48,944,9611349,114,1511349,046,77414保留盈餘六(十九)3310法定盈餘公積29,697,752829,697,752827,342,5343320特別盈餘公積3350未分配盈餘12,543,20859,809,936312,543,20837,622,03421653,622,7011554,929,63216其他權益3400其他權益10,364,858) (3) (16,166,723) ( 4) (11,112,320) (3)31XX歸屬於母公司業主之權益合計36XX非控制權益3XXX權益總計166,606,432四(三)33,246,772199,853,20444953154,786,52231,338,136186,124,65842951153,804,08731,930,811185,734,89845954重大或有負債及未認列之合 九約承諾重大之期後事項十一3X2X負債及權益總計$374,193,315 100 $365,112,310100 $ 343,800,771 100董事長:海英俊後附合併財務報表附註為本合併財務報告之一部分,請併同參閱。經理人:鄭平~7~會計主管:余博文博文博金宮業台 達 電 子 工 業 股 份 有 限 公 司 及 子 公 司合併資產負債表民國 111 年3 月31日及民國110年12月31日 3月31日(民國 111 年及 110年3月31日之合併資產負債表僅經核閱,未依一般公認審計準則查核)111資產附註金年 3 月 31 日 110年 12月 31 日 110額 %額 %單位:新台幣仟元年 3 月 31 日額 %流動資產1100現金及約當現金六(一)$53,165,86114 $49,855,05314 $60,858,095181110透過損益按公允價值衡量之六(二)金融資產-流動1,404,6471,085,729932,9251136按攤銷後成本衡量之金融資產-流動334,253327,238496,3951140合約資產-流動六(二十)3,130,98813,589,31312,321,91811150應收票據淨額六(五)2,998,59113,420,63313,480,7631170應收帳款淨額六(五)68,013,2521867,436,3771957,001,586171180應收帳款-關係人淨額t20,73227,83128,5271200其他應收款六(六)及七2,634,46011,815,3701,799,1541220本期所得稅資產513,015130X存貨六(七)67,188,24918349,20766,107,351344,2091849,144,171141410預付款項2,221,71812,450,26912,274,03911460待出售非流動資產淨額六(九)320,5511470其他流動資產82,22693,27276,99011XX流動資產合計201,707,99254196,878,19454178,758,77252非流動資產1510透過損益按公允價值衡量之金融資產-非流動六(二)3,078,13813,351,79813,247,32111517透過其他綜合損益按公允價六(三)值衡量之金融資產-非流動1,626,8011,587,8431,962,8601560合約資產-非流動六(二十)490,986462,941477,0141550採用權益法之投資六(八)66,84763,731787,4061600不動產、廠房及設備六(九)及八79,143,6172176,607,2852171,097,325211755使用權資產六(十)3,138,96213,006,96012,956,28711760投資性不動產淨額14,07014,07014,0701780無形資產六(十一)75,163,0172073,609,5642075,992,081221840遞延所得稅資產7,439,88927,177,44726,395,47321900其他非流動資產六(五)(十二)及八15XX非流動資產合計2,322,996172,485,3231461XXX資產總計374,193,315100 $2,352,477168,234,116365,112,310146100 $2,112,162165,041,999343,800,771 100148(續 次 頁)-6-'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'台 達 電 子 工 業 股 份 有 限 公 司 及 子 公 司合併 資產負債表民國 111 年3 月31日及民國110年12月31日 3月31日(民國 111 年及 110年3月31日之合併資產負債表僅經核閱,未依一般公認審計準則查核)111負債及權益附註年 3 月 31 日 110年 12月 31 日額 %0/110額 % 金單位:新台幣仟元年 3 月 31 日額 %流動負債2100短期借款六(十三)$3,503,6321 $4,397,3621$1,678,80612120透過損益按公允價值衡量之六(二)金融負債-流動56,37741,371209,7282130合約負債-流動六(二十)5,454,7385,438,9395,076,6252150應付票據2684404,2952170應付帳款51,418,2301454,554,4621547,773,555142180應付帳款-關係人七16,51215,0237,5962200其他應付款六(十四)33,883,48235,652,2021034,402,563102230本期所得稅負債4,077,91813,486,10813,198,13512300其他流動負債六(十五)5,243,9864,583,5704,393,71421XX流動負債合計103,655,14328108,169,4773096,745,01728非流動負債2540長期借款2570遞延所得稅負債2580租賃負債-非流動2600其他非流動負債25XX非流動負債合計2XXX負債總計六(十五)42,072,4751143,913,7871236,445,4021117,428,188516,777,156516,013,67751,443,0451,366,4011,350,8879,741,26038,760,83127,510,89070,684,9681970,818,17519174,340,11147178,987,6524961,320,856158,065,8731846權益股本3110普通股股本六(十七)25,975,433725,975,433725,975,4338資本公積六(十八)3200資本公積48,944,9611349,114,1511349,046,77414保留盈餘六(十九)3310法定盈餘公積29,697,752829,697,752827,342,5343320特別盈餘公積3350未分配盈餘12,543,20859,809,936312,543,20837,622,03421653,622,7011554,929,63216其他權益3400其他權益10,364,858) (3) (16,166,723) ( 4) (11,112,320) (3)31XX歸屬於母公司業主之權益合計36XX非控制權益3XXX權益總計166,606,432四(三)33,246,772199,853,20444953154,786,52231,338,136186,124,65842951153,804,08731,930,811185,734,89845954重大或有負債及未認列之合 九約承諾重大之期後事項十一3X2X負債及權益總計$374,193,315 100 $365,112,310100 $ 343,800,771 100董事長:海英俊後附合併財務報表附註為本合併財務報告之一部分,請併同參閱。經理人:鄭平~7~會計主管:余博文博文博金宮業台 達 電 子 工 業 股 份 有 限 公 司 及 子 公 司合併資產負債表民國 111 年3 月31日及民國110年12月31日 3月31日(民國 111 年及 110年3月31日之合併資產負債表僅經核閱,未依一般公認審計準則查核)111資產附註金年 3 月 31 日 110年 12月 31 日 110額 %額 %單位:新台幣仟元年 3 月 31 日額 %流動資產1100現金及約當現金六(一)$53,165,86114 $49,855,05314 $60,858,095181110透過損益按公允價值衡量之六(二)金融資產-流動1,404,6471,085,729932,9251136按攤銷後成本衡量之金融資產-流動334,253327,238496,3951140合約資產-流動六(二十)3,130,98813,589,31312,321,91811150應收票據淨額六(五)2,998,59113,420,63313,480,7631170應收帳款淨額六(五)68,013,2521867,436,3771957,001,586171180應收帳款-關係人淨額t20,73227,83128,5271200其他應收款六(六)及七2,634,46011,815,3701,799,1541220本期所得稅資產513,015130X存貨六(七)67,188,24918349,20766,107,351344,2091849,144,171141410預付款項2,221,71812,450,26912,274,03911460待出售非流動資產淨額六(九)320,5511470其他流動資產82,22693,27276,99011XX流動資產合計201,707,99254196,878,19454178,758,77252非流動資產1510透過損益按公允價值衡量之金融資產-非流動六(二)3,078,13813,351,79813,247,32111517透過其他綜合損益按公允價六(三)值衡量之金融資產-非流動1,626,8011,587,8431,962,8601560合約資產-非流動六(二十)490,986462,941477,0141550採用權益法之投資六(八)66,84763,731787,4061600不動產、廠房及設備六(九)及八79,143,6172176,607,2852171,097,325211755使用權資產六(十)3,138,96213,006,96012,956,28711760投資性不動產淨額14,07014,07014,0701780無形資產六(十一)75,163,0172073,609,5642075,992,081221840遞延所得稅資產7,439,88927,177,44726,395,47321900其他非流動資產六(五)(十二)及八15XX非流動資產合計2,322,996172,485,3231461XXX資產總計374,193,315100 $2,352,477168,234,116365,112,310146100 $2,112,162165,041,999343,800,771 100148(續 次 頁)-6-'"
+            ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "dt['435']"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IYfN4q8_je1J"
+      },
+      "outputs": [],
       "source": [
         "temp2 = list()\n",
         "for i,v in dt.items():\n",
         "  if v != \"\":\n",
         "    temp2.append(i)"
-      ],
-      "metadata": {
-        "id": "IYfN4q8_je1J"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "temp2"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1261,28 +1245,44 @@
         "id": "I4jkwJ1i313w",
         "outputId": "42096da9-f779-4776-9e16-d0f2fba99d33"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['435', '192', '421', '384', '347', '385', '346', '434', '420', '408']"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "temp2"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "UvHwtHg-32pG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
