--- a/bm25_OCR_faq串RAG.ipynb
+++ b/bm25_OCR_faq串RAG.ipynb
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = #please input your openai key\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = please input your openai key\n",
     "\n",
     "if os.path.exists(\"/Users/yhk/Desktop/大三上/DataMining/FP/競賽資料集/reference/chroma\"):\n",
     "    shutil.rmtree(\"/Users/yhk/Desktop/大三上/DataMining/FP/競賽資料集/reference/chroma\")\n",
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = #please input your openai key\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = please input your openai key\n",
     "# laod local chroma \n",
     "embeddings = OpenAIEmbeddings()\n",
     "vectorstore = Chroma(persist_directory=\"/Users/yhk/Desktop/大三上/DataMining/FP/競賽資料集/reference/chroma\", embedding_function=embeddings)"
